Shadow added to the button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="bg-white p-6 rounded-2xl rounded-t-none pt-8">
                 <div class="grid grid-cols-3 gap-9">
                     <!-- card 01 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">ShopEase</p>
@@ -128,7 +128,7 @@
                     </div>
 
                     <!-- card 02 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">CloudSync</p>
@@ -160,7 +160,7 @@
                     </div>
 
                     <!-- card 03 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">SwiftPay</p>
@@ -192,7 +192,7 @@
                     </div>
 
                     <!-- card 04 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">Meta</p>
@@ -222,7 +222,7 @@
                     </div>
 
                     <!-- card 05 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">Google LLC</p>
@@ -252,7 +252,7 @@
                     </div>
 
                     <!-- card 06 -->
-                    <div class="bg-bcground p-6 rounded-2xl flex justify-center">
+                    <div class="bg-bcground p-6 rounded-2xl flex justify-center shadow-md">
                         <div class="">
                             <div class="bg-white w-28 h-10 rounded-xl flex justify-center items-center">
                                 <p class="">Glassdoar</p>
