--- a/questionPage.html
+++ b/questionPage.html
@@ -42,7 +42,7 @@
           <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
         </div>
       </a>
-      <a href="index.html" class="">
+      <a href="index.html" class="shadow-md shadow-gray-500 rounded-md">
         <button class="card-btn bg-gradiantBG1 text-white py-4 px-5 rounded-md">
           Back to Desk
         </button>
